--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<meta http-equiv="Content-Type" content="text/html" charset="utf-8">
 
 　　---
 　　layout: default
