--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<meta http-equiv="Content-Type" content="text/html" charset="utf-8">
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>寄舞-遍匈</title>
+		<link rel="stylesheet" href="css/css.css" />
+	</head>
+	<body>
 　　---
 　　layout: default
 　　title: 厘議Blog
@@ -11,3 +17,5 @@
 　　　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
 　　　　{% endfor %}
 　　</ul>
+	</body>
+</html>
