--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
-		<title>´óÉñ-Ê×Ò³</title>
-		<link rel="stylesheet" href="css/css.css" />
+		<meta charset="UTF-8">
+		<title></title>
 	</head>
 	<body>
-¡¡¡¡---
-¡¡¡¡layout: default
-¡¡¡¡title: ÎÒµÄBlog
-¡¡¡¡---
-¡¡¡¡<h2>{{ page.title }}</h2>
-¡¡¡¡<p>×îÐÂÎÄÕÂ</p>
-¡¡¡¡<ul>
-¡¡¡¡¡¡¡¡{% for post in site.posts %}
-¡¡¡¡¡¡¡¡¡¡¡¡<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-¡¡¡¡¡¡¡¡{% endfor %}
-¡¡¡¡</ul>
+		
+---
+ã€€ã€€layout: default
+ã€€ã€€title: æˆ‘çš„Blog
+ã€€ã€€---
+ã€€ã€€<h2>{{ page.title }}</h2>
+ã€€ã€€<p>æœ€æ–°æ–‡ç« </p>
+ã€€ã€€<ul>
+ã€€ã€€ã€€ã€€{% for post in site.posts %}
+ã€€ã€€ã€€ã€€ã€€ã€€<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+ã€€ã€€ã€€ã€€{% endfor %}
+ã€€ã€€</ul>		
+		
+		
 	</body>
 </html>
