--- a/NewYear/NewYear/phone.html
+++ b/NewYear/NewYear/phone.html
@@ -23,7 +23,7 @@ $(function(){
     
     
    if(isAndroid==false || isiOS==false){
-		window.location.replace("index.html");
+		alert("不是手机");
    }else{
    		alert("祝师姐节日快乐！！！");
    }
