--- a/ForMiss/index.html
+++ b/ForMiss/index.html
@@ -11,12 +11,8 @@
 			var month=myDate.getMonth()+1;
 			var date=myDate.getDate();
 			if(year!=2019  && month!=01 || year!=2019  && month!=1){
-				confirm("哈哈哈！！！元旦才可以看哦！！！");
-				if(confirm){
-　　					window.close();
-				}else{
-					window.close();
-				}
+				window.close();
+				alert("哈哈哈！！！元旦才可以看哟！！！");
 			}else{
 				$(function(){
 				    var u = navigator.userAgent;
