--- a/ForMiss/404.html
+++ b/ForMiss/404.html
@@ -3,13 +3,35 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>请元旦再来</title>
+		<link rel="stylesheet" href="css/404.css">
 		<style>
 			*{margin: 0;padding: 0;}
 			body{background: #991B05;}
-			.tips{width: 1200px;height: auto;font-size: 50px;color: white;text-align: center;line-height: 100px;margin: 200px auto;}
+			.tips{width:100%;height: auto;font-size: 2em;color: white;text-align: center;line-height: 100px;margin: 0 auto;}
 		</style>
 	</head>
 	<body>
-		<div class="tips">元旦记得打开哦！！！哈哈哈！！！</div>
+		<div class="ghost">
+		   <div class="body">
+		      <div class="face">
+		         <div class="eye left"></div>
+		         <div class="eye right"></div>
+		         <div class="smile"></div>
+		         <div class="rosy left"></div>
+		         <div class="rosy right"></div>
+		      </div>
+		      <div class="arm left"></div>
+		      <div class="arm right"></div>
+		      <div class="bottom">
+		         <div></div>
+		         <div></div>
+		         <div></div>
+		         <div></div>
+		         <div></div>
+		      </div>
+		   </div>
+		   <div class="shadow"></div>
+		</div>		
+		<div class="tips">师姐，元旦记得打开哦！！！哈哈哈！！！</div>
 	</body>
 </html>
