--- a/NewYear/index.html
+++ b/NewYear/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -129,7 +129,7 @@
 		<div><img src="img/pig_5.png" /><div class="bless">开开心心</div></div>
 		<div><img src="img/pig_6.png" /><div class="bless">无忧无虑</div></div>
 		<div><img src="img/pig_7.png" /><div class="bless">漂漂亮亮</div></div>
-		<div><img src="img/pig_8.png" /><div class="bless">美妙守护</div></div>
+		<div><img src="img/pig_8.png" /><div class="bless">美丽守护</div></div>
 		<div><img src="img/pig_9.png" /><div class="bless">健健康康</div></div>
 		<div><img src="img/pig_10.png" /><div class="bless">幸运之神</div></div>
 		<div style="clear: both;"></div>
